copy edits sec 4

--- a/preamble.tex
+++ b/preamble.tex
@@ -319,14 +319,15 @@
 
 \providecommand{\AST}[1][]{\index{AST (abstract syntax tree)!#1}}
 \providecommand{\HOAS}[1][]{\index{HOAS (higher-order abstract syntax)!#1}}
+\providecommand{\aq}[1][]{\index{antiquotation!#1}}
 \providecommand{\arrs}[1][]{\index{array!#1}}
+\providecommand{\cg}[1][]{\index{code generation!#1}}
 \providecommand{\cuda}[1][]{\index{CUDA!#1}}
 \providecommand{\fusion}[1][]{\index{fusion!#1}}
 \providecommand{\gpgpu}[1][]{\index{GPGPU (general-purpose computing on GPUs)!#1}}
 \providecommand{\gpu}[1][]{\index{GPU (graphics processing unit)!#1}}
 \providecommand{\lang}[1][]{\index{language!#1}}
 \providecommand{\qq}[1][]{\index{quasiquotation!#1}}
-\providecommand{\aq}[1][]{\index{antiquotation!#1}}
 \providecommand{\skeleton}[1][]{\index{algorithmic skeleton!#1}}
 
 \index{DSL|see {language: domain-specific}}
